--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
         <ul class="main-nav__list">
           <li class="main-nav__item"><a class= "main-nav__link" href="#home">Home</a></li>
           <li class="main-nav__item"><a class= "main-nav__link" href="#services">Services</a></li>
-          <li class="main-nav__item"><a class= "main-nav__link" href="#clients">Clients</a></li>
+          <li class="main-nav__item"><a class= "main-nav__link" href="#">Clients</a></li>
           <li class="main-nav__item"><a class= "main-nav__link" href="#">Team</a></li>
           <li class="main-nav__item"><a class= "main-nav__link" href="#contact">Contact</a></li>
         </ul>
@@ -35,28 +35,120 @@
         <a class="home__button">Learn More</a>
       </div>
     </section>
-    <section class="services container">
+    <section class="services">
       <ul class="services__list">
-        <li class="services__item">
-          <h2 class="services__title"><a name="services"></a><span>Web</span> Development</h2>
-          <p class="services__text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.
-            Iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim.
+        <li class="services__item container">
+          <div class="services__text-wrapper">
+            <h2 class="services__title"><a name="services"></a><span>Web</span> Development</h2>
+            <p class="services__text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.<br><br>Iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim.
+            </p>
+          </div>
+          <i class="icon icon-flowtree-icon"></i>
+        </li>
+        <li class="services__item  services__item--bg">
+          <div class="services__bg-wrapper container">
+            <i class="icon icon-users-icon"></i>
+            <div class="services__text-wrapper">
+              <h2 class="services__title"><span>Identity</span> Branding</h2>
+              <p class="services__text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.<br><br>Iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat.
+              </p>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="skills container">
+      <h2 class="visually-hidden">Skills</h2>
+      <ul class="skills__list">
+        <li class="skills__item">
+          <i class="icon icon-person-icon skills__icon"></i>
+          <h3 class="skills__title">Branding & Identity</h3>
+          <p class="skills__text">Proin iaculis purus consequat sem cure
+            digni ssim. Donec porttitora entum suscipit
+            aenean rhoncus posuere odio in tincidunt.
           </p>
         </li>
-        <li class="services__item">
-          <h2 class="services__title"><span>Identity</span> Branding</h2>
-          <p class="services__text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.
-            Iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat.
+        <li class="skills__item">
+          <i class="icon icon-browser-icon skills__icon"></i>
+          <h3 class="skills__title">Web & Graphic Design</h3>
+          <p class="skills__text">Proin iaculis purus consequat sem cure
+            digni ssim. Donec porttitora entum suscipit
+            aenean rhoncus posuere odio in tincidunt.
+          </p>
+        </li>
+        <li class="skills__item">
+          <i class="icon icon-mobile-icon skills__icon"></i>
+          <h3 class="skills__title">Mobile App Development</h3>
+          <p class="skills__text">Proin iaculis purus consequat sem cure
+            digni ssim. Donec porttitora entum suscipit
+            aenean rhoncus posuere odio in tincidunt.
+          </p>
+        </li>
+        <li class="skills__item">
+          <i class="icon icon-video-icon skills__icon"></i>
+          <h3 class="skills__title">Animations</h3>
+          <p class="skills__text">Proin iaculis purus consequat sem cure
+            digni ssim. Donec porttitora entum suscipit
+            aenean rhoncus posuere odio in tincidunt.
+          </p>
+        </li>
+        <li class="skills__item">
+          <i class="icon icon-star-icon skills__icon"></i>
+          <h3 class="skills__title">UI/UX</h3>
+          <p class="skills__text">Proin iaculis purus consequat sem cure
+            digni ssim. Donec porttitora entum suscipit
+            aenean rhoncus posuere odio in tincidunt.
+          </p>
+        </li>
+        <li class="skills__item">
+          <i class="icon icon-camera-icon skills__icon"></i>
+          <h3 class="skills__title">Photography</h3>
+          <p class="skills__text">Proin iaculis purus consequat sem cure
+            digni ssim. Donec porttitora entum suscipit
+            aenean rhoncus posuere odio in tincidunt.
           </p>
         </li>
       </ul>
     </section>
+    <section class="contacts">
+      <div class="contacts__wrapper container">
+        <div class="contacts__wrapper-text">
+          <h2 class="contacts__title"><span>Say</span> Hello</h2>
+          <p class="contacts__text">Don’t be shy, drop us an email and say hello! We are a really nice
+            bunch of people :)
+          </p>
+          <ul class="contacts__list">
+            <li class="contains__item"><i class="icon icon-camera-icon contacts__icon"></i>(416) 555-0000</li>
+            <li class="contains__item"><i class="icon icon-camera-icon contacts__icon"></i>hello@escape.com</li>
+            <li class="contains__item"><a class="contacts__link"><i class="icon icon-camera-icon contacts__icon"></i>@escape</a></li>
+            <li class="contains__item"><a class="contacts__link"><i class="icon icon-camera-icon contacts__icon"></i>facebook.com/escape</a></li>
+            <li class="contains__item"><a class="contacts__link"><i class="icon icon-camera-icon contacts__icon"></i>plus.com/escape</a></li>
+            <li class="contains__item"><a class="contacts__link"><i class="icon icon-camera-icon contacts__icon"></i>pinterest.com/escape</a></li>
+          </ul>
+        </div>
+        <form class="contacts__form form" action="" method="post">
+        <fieldset class="form__wrapper">
+          <h3 class="visually-hidden">Form CallBack</h3>
+          <p class="form__item">
+            <label class="visually-hidden" for="name">Name</label>
+            <input class="form__input" type="text" name="name" id="name" value="" placeholder="Your Name *" required>
+          </p>
+          <p class="form__item">
+            <label class="visually-hidden" for="e-mail">E-mail</label>
+            <input class="form__input" type="e-mail" name="e-mail" id="name" value="" placeholder="Your E-mail *" required>
+          </p>
+          <p class="form__item">
+            <label class="visually-hidden" for="message">Message</label>
+            <textarea class="form__input" name="message" id="massage" placeholder="Your Message *" required></textarea>
+          </p>
+        </fieldset>
+      </div>
+    </section>
   </main>
-<script> $("#navToggle").click(function() {
+  <script> $("#navToggle").click(function() {
     $(this).toggleClass("active");
     $(".main-nav").toggleClass("open");
-    // this line ▼ prevents content scroll-behind
-    // $("body").toggleClass("locked");
-});</script>
+    });
+  </script>
 </body>
 </html>
