--- a/source/index.html
+++ b/source/index.html
@@ -4,15 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="format-detection" content="telephone=no">
-  <title>HTML Academy: Пинк</title>
+  <title>Escape</title>
   <link href="css/style-min.css" rel="stylesheet">
+  <link rel="preload" href="fonts/brandongrotesque.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="fonts/brandongrotesque-bold.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="img/bg-home-img.jpg" as="image">
   <script src="js/main-min.js"></script>
 </head>
 <body>
   <header class="main-header">
     <div class="main-header__wrapper container">
       <a class="main-header__logo">
-        <img src="img/logo.png">
+        <img src="img/logo-img.png">
       </a>
       <nav class="main-nav">
         <ul class="main-nav__list">
@@ -43,11 +46,11 @@
             <p class="services__text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt.<br><br>Iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim.
             </p>
           </div>
-          <i class="icon icon-flowtree-icon"></i>
+          <i class="icon icon-flowtree-icon services__icon"></i>
         </li>
         <li class="services__item  services__item--bg">
           <div class="services__bg-wrapper container">
-            <i class="icon icon-users-icon"></i>
+            <i class="icon icon-users-icon services__icon services__icon--users"></i>
             <div class="services__text-wrapper">
               <h2 class="services__title"><span>Identity</span> Branding</h2>
               <p class="services__text">Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit.<br><br>Iaculis purus consequat sem cure digni ssim. Donec porttitora entum suscipit aenean rhoncus posuere odio in tincidunt. Proin iaculis purus consequat.
@@ -77,7 +80,7 @@
           </p>
         </li>
         <li class="skills__item">
-          <i class="icon icon-mobile-icon skills__icon"></i>
+          <i class="icon icon-ipad-icon skills__icon"></i>
           <h3 class="skills__title">Mobile App Development</h3>
           <p class="skills__text">Proin iaculis purus consequat sem cure
             digni ssim. Donec porttitora entum suscipit
@@ -110,24 +113,25 @@
         </li>
       </ul>
     </section>
-    <section class="contacts">
-      <div class="contacts__wrapper container">
-        <div class="contacts__wrapper-text">
-          <h2 class="contacts__title"><span>Say</span> Hello</h2>
-          <p class="contacts__text">Don’t be shy, drop us an email and say hello! We are a really nice
-            bunch of people :)
-          </p>
-          <ul class="contacts__list">
-            <li class="contains__item"><i class="icon icon-camera-icon contacts__icon"></i>(416) 555-0000</li>
-            <li class="contains__item"><i class="icon icon-camera-icon contacts__icon"></i>hello@escape.com</li>
-            <li class="contains__item"><a class="contacts__link"><i class="icon icon-camera-icon contacts__icon"></i>@escape</a></li>
-            <li class="contains__item"><a class="contacts__link"><i class="icon icon-camera-icon contacts__icon"></i>facebook.com/escape</a></li>
-            <li class="contains__item"><a class="contacts__link"><i class="icon icon-camera-icon contacts__icon"></i>plus.com/escape</a></li>
-            <li class="contains__item"><a class="contacts__link"><i class="icon icon-camera-icon contacts__icon"></i>pinterest.com/escape</a></li>
-          </ul>
-        </div>
-        <form class="contacts__form form" action="" method="post">
-        <fieldset class="form__wrapper">
+  </main>
+  <footer class="main-footer">
+    <section class="contacts container">
+      <div class="contacts__wrapper">
+        <h2 class="contacts__title"><a name="contact"></a><span>Say</span> Hello</h2>
+        <p class="contacts__text">Don’t be shy, drop us an email and say hello! We are a really nice
+          bunch of people :)
+        </p>
+        <ul class="contacts__list">
+          <li class="contacts__item"><i class="icon icon-mobile-icon contacts__icon"></i>(416) 555-0000</li>
+          <li class="contacts__item"><i class="icon icon-mail-icon contacts__icon"></i>hello@escape.com</li>
+          <li class="contacts__item"><a class="contacts__link" href="https://twitter.com/@escape"><i class="icon icon-twitter-icon contacts__icon"></i>@escape</a></li>
+          <li class="contacts__item"><a class="contacts__link" href="https://www.facebook.com/escape"><i class="icon icon-facebook-icon contacts__icon"></i>facebook.com/escape</a></li>
+          <li class="contacts__item"><a class="contacts__link" href="https://plus.google.com/escape"><i class="icon icon-google-icon contacts__icon"></i>plus.com/escape</a></li>
+          <li class="contacts__item"><a class="contacts__link" href="https://www.pinterest.ru/escape/"><i class="icon icon-pinterest-icon contacts__icon"></i>pinterest.com/escape</a></li>
+        </ul>
+      </div>
+      <form class="contacts__form form" action="" method="post">
+        <fieldset>
           <h3 class="visually-hidden">Form CallBack</h3>
           <p class="form__item">
             <label class="visually-hidden" for="name">Name</label>
@@ -139,16 +143,16 @@
           </p>
           <p class="form__item">
             <label class="visually-hidden" for="message">Message</label>
-            <textarea class="form__input" name="message" id="massage" placeholder="Your Message *" required></textarea>
+            <textarea class="form__input form__input--textarea" name="message" id="message" placeholder="Your Message *" required></textarea>
           </p>
         </fieldset>
-      </div>
-    </section>
-  </main>
-  <script> $("#navToggle").click(function() {
-    $(this).toggleClass("active");
-    $(".main-nav").toggleClass("open");
+      </section>
+      <p class="copyright">&copy;2014 Escape by FreebiesXpress &#8226; Made In Toronto</p>
+    </footer>
+    <script> $("#navToggle").click(function() {
+      $(this).toggleClass("active");
+      $(".main-nav").toggleClass("open");
     });
-  </script>
-</body>
-</html>
+    </script>
+  </body>
+  </html>
